# jupyterlab-anaconda-analytics

./: .gitignore  .prettierignore  .stylelintrc  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  anaconda-project.yml  install.json  package-lock.json  package.json  pyproject.toml  renovate.json  setup.py  tsconfig.json
.github/workflows/: build.yml  check-release.yml  update-integration-tests.yml
schema/: plugin.json
src/: config.ts  index.ts  utils.ts
src/__tests__/: jupyterlab_anaconda_analytics.spec.ts
ui-tests/: package.json
ui-tests/tests/: jupyterlab_anaconda_analytics.spec.ts
